Fixed overflowing dropdown menu.

--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -305,4 +305,8 @@ ol {
     text-align: center !important;
     padding: 0.2em !important;
   }
+
+  .dropdown-menu-end {
+    right: 0em;
+  }
 }
